Mon Feb 28 17:08:03 2000  Christopher Faylor <cgf@cygnus.com>

	* include/rapi.h: New file.
	* lib/rapi.def: New file.

2000-02-11  Axel Riese  <ariese@andromeda.risc.uni-linz.ac.at>

	* oaidl.h (LPTYPECOMP): Remove multiple definition.

2000-02-03  Mumit Khan  <khan@xraylith.wisc.edu>

	* Snapshot 2000-02-03.

2000-01-21  Chris Faylor  <cgf@cygnus.com>

	* include/winnt.h: Add ARM support.

2000-01-19  Mumit Khan  <khan@xraylith.wisc.edu>

	From Greg Primes <gregory.l.priem@intel.com>:
	* include/oaidl.h (DESCKIND): Define macro.
	(ITypeComp): Define interface.
	(ITypeComp): Likewise.
	* rpcndr.h (DECLSPEC_UUID): Define macro.
	(MIDL_INTERFACE): Likewise.

	* include/psapi.h: New file.
	* include/imagehlp.h: New file.
	* lib/imagehlp.def: New file.

	* include/oaidl.h (tagVARIANT): Update fields.

	From Craig Lanning <CraigL@DyCon.com>:
	* include/commctrl.h: Add some TCS_* macros.
	* include/winnls.h (IsValidLocale): Add prototype.

2000-01-18  Mumit Khan  <khan@xraylith.wisc.edu>

	* include/oaidl.h: OLE Patches from "Fifer, Eric"
	<EFifer@sanwaint.com> needed to build Win32::OLE perl module.
	* include/objbase.h: Likewise.
	* include/objidl.h: Likewise.
	* include/ocidl.h: New file.
	* include/oleauto.h: Likewise.
	* include/wtypes.h: Likewise.
	* lib/oleaut32.def: Likewise.

	* include/lmserver.h (NetServerTransportAddEx): Fix prototype.
	Thanks to "Jon Leichter" <jon@symas.com>.
	* include/commctrl.h (LVM_FINDITEM): Fix typo in macro.
	* include/winbase.h: Add GetLongPathName{A,W} prototypes.
	* include/shellapi.h (SHGetFileInfo): Add macro. Thanks to
	"Axel Riese" <ariese@andromeda.risc.uni-linz.ac.at>.
	(CommandLineToArgvW): Fix prototype. Thanks to "Frans E. van
	Dorsselaer" <frans@bia-bv.demon.nl>.
	* include/httpext.h: New file. Thanks to Jan Nijtmans
	<j.nijtmans@chello.nl>.
	* include/mmsystem.h (WAVEFORMATEX): Guard definition to avoid
	redefinition of LPCWAVEFORMATEX in DirectX headers.
	(CALLBACK_NULL): Define to be 0. Thanks to Krzysztof Nikiel